--- a/Certyfikaty _ Materace Hilding.html
+++ b/Certyfikaty _ Materace Hilding.html
@@ -959,7 +959,7 @@ function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config
 
                 <li class="poziom0 nav_top_2 "><a href="https://hilding.pl/certyfikaty.html">Konfigurator</a></li>
 
-<li class="poziom0 find-shop nav_top_3 latest active "><a href="https://hilding.pl/index/whereBuy">Znajdź sklep</a></li>
+<li class="poziom0 find-shop nav_top_3 latest active "><a href="https://hilding.pl/index/whereBuy">Køb nu</a></li>
 
     </ul>
 </div>
@@ -1005,7 +1005,7 @@ function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config
 
             <li class="poziom0 nav_top_2 "><a href="https://hilding.pl/certyfikaty.html">Konfigurator</a></li>
 
-<li class="poziom0 find-shop nav_top_3 latest active "><a href="https://hilding.pl/index/whereBuy">Znajdź sklep</a></li>
+<li class="poziom0 find-shop nav_top_3 latest active "><a href="https://hilding.pl/index/whereBuy">Køb nu</a></li>
 
         </ul>
     </div>
@@ -1104,7 +1104,7 @@ function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config
             <div class="row">
                 <div class="col-md-6 configurator-left">
                     <h5 >Wymiar i cena prezentowanego<br> zestawu:</h5>
-                    <span class="blue-text configurator-price">3299,90 PLN*</span>
+                    <span class="blue-text configurator-price">3299,90 DKK*</span>
                     <p>Cena zawiera podatek VAT 23%</p>
                     <div class="text-center">
                         <img src="img/glamour.png" style="width: 75%; padding-left: auto; padding-right: auto;" alt="Glamour"/>
@@ -1126,7 +1126,7 @@ function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config
                                         </div>
                                         <h6 class="text-center" style="color: #212121;">BOX PODNOSZONY</h6>
                                         <p>Wymiar i cena</p>
-                                        <p class="blue-text bold">2 398,00 PLN</p>
+                                        <p class="blue-text bold">2 398,00 DKK</p>
                                         <p class="blue-text">Rozmiar</p>
                                     </div>
                                 </a>
@@ -1137,7 +1137,7 @@ function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config
                                         </div>
                                         <h6 class="text-center" style="color: #212121;">KONTYNENT</h6>
                                         <p>Wymiar i cena</p>
-                                        <p class="blue-text bold">2 398,00 PLN</p>
+                                        <p class="blue-text bold">2 398,00 DKK</p>
                                         <p class="blue-text">Rozmiar</p>
                                     </div>
                                 </a>
@@ -1148,7 +1148,7 @@ function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config
                                         </div>
                                         <h6 class="text-center" style="color: #212121;">KONTYNET Z SZUFLADĄ</h6>
                                         <p>Wymiar i cena</p>
-                                        <p class="blue-text bold">2 398,00 PLN</p>
+                                        <p class="blue-text bold">2 398,00 DKK</p>
                                         <p class="blue-text">Rozmiar</p>
                                     </div>
                                 </a>
@@ -1194,7 +1194,7 @@ function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config
             <form method="POST" action="https://hilding.pl/index/whereBuy">
                 <div class="row find-shop-text ver-center">
                     <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
-                        <h2>Znajdź sklep</h2>
+                        <h2>Køb nu</h2>
                         <p>
                             </p><p>Jesteś zainteresowany naszą ofertą? Skorzystaj z wyszukiwarki i znajdź najbliższy sklep z produktami Hilding Anders. Możesz kupić swój materac internetowo i stacjonarnie.</p>
                         <p></p>
@@ -1203,7 +1203,7 @@ function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config
                         <input id="findshop" name="city" type="text" class="findshop-input" placeholder="Twój kod pocztowy lub miasto" value="">
                     </div>
                     <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4 find-shop-space-delete2 margin-top-25-mobile-tablet">
-                        <button type="submit" class="green-button-find">Znajdź sklep</button>
+                        <button type="submit" class="green-button-find">Køb nu</button>
                     </div>
                 </div>
             </form>
