--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <span id="price" class="blue-text configurator-price"></span>
                     <p class="discount-info">Udsalgspris</p>
                     <span id="price-discount" class="red-text configurator-price"></span>
-                    <p id="price-vat" hidden>Prisen inkl. 25% moms</p>
+                    <p id="price-vat" hidden>inkl. 25% moms</p>
                 </div>
                 <div id="example-visualization-info">
                 </div>
