--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&amp;subset=latin-ext"
           rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="style.min.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <script src="https://dagrejs.github.io/project/graphlib/latest/graphlib.min.js"></script>
     <script src="configurator.js"></script>
 </head>
@@ -60,7 +60,7 @@
                 <div id="example-visualization-info">
                 </div>
                 <picture id="base-img">
-                    <source type="image/webp" srcset="renders/tlo001.webp">
+<!--                    <source type="image/webp" srcset="renders/tlo001.webp">-->
                     <img id="base-img-src" class="img-responsive" src="renders/tlo001.jpg" alt="Glamour"/>
                 </picture>
             </div>
@@ -76,6 +76,9 @@
             <div class="row owl-width">
                 <div id="step-content" class="col-sm-12">
 
+                </div>
+                <div id="background-color" class="col-sm-12">
+                    <h5 id="background-color-header" class="text-center">Vælg en indvendig farve</h5>
                 </div>
             </div>
             <div class="row" style="padding-top: 25px">
