--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
 <div id="start-img">
     <div class="row text-center" id="configurator-start-view">
-        <h3 class="configurator-start-text ">din stil - dit valg.</h3>
+        <h3 class="configurator-start-text ">Byg din egen seng</h3>
         <button type="button" class="btn btn-lg btn-star" onclick="configurator.start()">Start konfigurator.</button>
     </div>
 </div>
@@ -78,7 +78,7 @@
 
                 </div>
                 <div id="background-color" class="col-sm-12">
-                    <h5 id="background-color-header" class="text-center">Vælg en indvendig farve</h5>
+                    <h5 id="background-color-header" class="text-center">Vælg farve på væg</h5>
                 </div>
             </div>
             <div class="row" style="padding-top: 25px">
